# Shepherd

./: .dockerignore  .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  cliff.toml  codecov.yml  deny.toml  index.html  package-lock.json  package.json  playwright.config.ts  renovate.json  tailwind.config.ts  tarpaulin.toml  typos.toml  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit
adapters/: aider.toml  claude-code.toml  codex.toml  gemini-cli.toml  mistral-vibe.toml
crates/shepherd-cli/: Cargo.toml
crates/shepherd-cli/src/: lib.rs  main.rs
crates/shepherd-cli/tests/: auto_spawn_test.rs
crates/shepherd-core/: Cargo.toml  build.rs
crates/shepherd-core/src/: coordination.rs  events.rs  lib.rs  replay.rs
crates/shepherd-core/src/adapters/: mod.rs  protocol.rs
crates/shepherd-core/src/adapters/defaults/: adal.toml  aider.toml  claude-code.toml  codex.toml  gemini-cli.toml  goose.toml  gptme.toml  opencode.toml  plandex.toml
crates/shepherd-core/src/automation/: mod.rs
crates/shepherd-core/src/cloud/: auth.rs  credits.rs  generation.rs  mod.rs  notifications.rs  observability.rs  sync.rs  templates.rs
crates/shepherd-core/src/config/: mod.rs  types.rs
crates/shepherd-core/src/context/: extractor.rs  feedback.rs  index.rs  injection.rs  mcp_executor.rs  mod.rs  package.rs  provider.rs  tfidf.rs  tfidf_provider.rs
crates/shepherd-core/src/db/: mod.rs  models.rs  queries.rs
crates/shepherd-core/src/dispatch/: mod.rs  monitor.rs
crates/shepherd-core/src/ecosystem/: alaya.rs  context7.rs  context_hub.rs  context_mode.rs  docling.rs  exa.rs  ffmpeg.rs  frontend_design.rs  mod.rs  playwright.rs  ralph_loop.rs  rtk.rs  serena.rs  sourcegraph.rs  superpowers.rs  whisper.rs
crates/shepherd-core/src/gates/: builtin.rs  mod.rs  plugin.rs
crates/shepherd-core/src/iterm2/: auth.rs  client.rs  mod.rs  scanner.rs  session.rs
crates/shepherd-core/src/llm/: mod.rs  providers.rs
crates/shepherd-core/src/logogen/: export.rs  generate.rs  mod.rs
crates/shepherd-core/src/namegen/: brainstorm.rs  mod.rs  rdap.rs  validate.rs
crates/shepherd-core/src/northstar/: context.rs  mod.rs  phases.rs
crates/shepherd-core/src/observability/: budget.rs  metrics.rs  mod.rs  pricing.rs  store.rs
crates/shepherd-core/src/pr/: commit.rs  github.rs  mod.rs
crates/shepherd-core/src/pty/: mod.rs  sandbox.rs  status.rs
crates/shepherd-core/src/triggers/: detectors.rs  mod.rs
crates/shepherd-core/src/wizard/: state.rs
crates/shepherd-core/src/yolo/: mod.rs  rules.rs
crates/shepherd-server/: Cargo.toml
crates/shepherd-server/src/: handler_tests.rs  lib.rs  main.rs  startup.rs  state.rs  ws.rs
crates/shepherd-server/src/routes/: automation.rs  cloud.rs  gates.rs  health.rs  iterm2.rs  logogen.rs  metrics.rs  mod.rs  namegen.rs  northstar.rs  plugins.rs  pr.rs  replay.rs  summaries.rs  sync.rs  tasks.rs  templates.rs  triggers.rs
crates/shepherd-server/tests/: integration.rs  server_test.rs  shutdown_test.rs  startup_test.rs  ws_test.rs
docs/: competitive-analysis-agent-orchestrators.md
docs/superpowers/plans/: 2026-03-10-shepherd-plan-1-core-engine.md  2026-03-10-shepherd-plan-2-frontend.md  2026-03-10-shepherd-plan-3-lifecycle.md  2026-03-12-shepherd-pro-cloud-backend.md  2026-03-16-iterm2-session-adoption.md  2026-03-16-shepherd-pro-backend.md  2026-03-19-shepherd-v1-phase1.md  2026-03-22-desktop-app-completion.md
docs/superpowers/specs/: 2026-03-10-shepherd-design.md  2026-03-12-shepherd-pro-freemium-design.md  2026-03-15-iterm2-session-adoption-design.md  2026-03-16-shepherd-pro-backend-design.md  2026-03-19-shepherd-v1-design.md  2026-03-22-desktop-app-completion-design.md
e2e/: accessibility.spec.ts  app.spec.ts  cloud-settings.spec.ts  command-palette.spec.ts  cost-dashboard.spec.ts  ecosystem.spec.ts  focus-view.spec.ts  navigation.spec.ts  new-task-dialog.spec.ts  replay-viewer.spec.ts  template-gallery.spec.ts
scripts/: install.sh  shepherd-bridge.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tray.rs
src/__tests__/: integration.test.tsx
src/features/cloud/: CloudSettings.tsx  CreditBalance.tsx  TrialBadge.tsx
src/features/ecosystem/: EcosystemManager.tsx  PluginCard.tsx
src/features/focus/: DiffViewer.tsx  FocusView.tsx  PermissionPrompt.tsx  ResumePrompt.tsx  SessionSidebar.tsx  TaskSummary.tsx  Terminal.tsx
src/features/gates/: GateResults.tsx
src/features/iterm2/: Iterm2Badge.tsx  SessionPicker.tsx  SetupPrompt.tsx
src/features/kanban/: KanbanBoard.tsx  KanbanColumn.tsx  KanbanFilters.tsx  TaskCard.tsx  filterTasks.ts  useDragAndDrop.ts
src/features/logogen/: LogoGenerator.tsx
src/features/namegen/: NameGenerator.tsx
src/features/northstar/: NorthStarWizard.tsx
src/features/observability/: AgentSpendingRow.tsx  BudgetBar.tsx  CostDashboard.tsx  ExportButton.tsx
src/features/palette/: CommandPalette.tsx
src/features/pr/: PrPipeline.tsx
src/features/replay/: EventRow.tsx  EventTypeBadge.tsx  ReplayViewer.tsx
src/features/shared/: AgentBadge.tsx  ErrorBoundary.tsx  ErrorDisplay.tsx  Header.tsx  Layout.tsx  LazyFallback.tsx  StatusIndicator.tsx
src/features/tasks/: NewTaskDialog.tsx
src/features/templates/: TemplateGallery.tsx
src/features/triggers/: TriggerToast.tsx
src/features/wizard/: ProjectWizard.tsx  WizardStepper.tsx
src/hooks/: useAsyncAction.ts  useAuthCallback.ts  useCloudSync.ts  useKeyboardShortcuts.ts  useNotifications.ts  useSessionPersistence.ts  useTaskStaleness.ts  useWebSocket.ts
src/lib/: api.ts  export.ts  keys.ts  sounds.ts  tauri.ts  ws.ts
src/store/: index.ts  observability.ts  sessions.ts  tasks.ts  ui.ts
src/test/: setup.ts
src/types/: events.ts  index.ts  permission.ts  session.ts  task.ts
tests/integration/: docs_test.rs  lifecycle_test.rs
(+43 files in other folders)
