[workspace]
resolver = "2"
members = [
    "crates/shepherd-core",
    "crates/shepherd-server",
    "crates/shepherd-cli",
]
exclude = [
    "src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
shepherd-core = { path = "crates/shepherd-core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
