[package]
name = "shepherd-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "time"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "shepherd_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "shepherd-desktop"
path = "src/main.rs"

[workspace]
