[package]
name = "shepherd-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["devtools", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "time"] }
shepherd-server = { path = "../crates/shepherd-server" }
shepherd-core = { path = "../crates/shepherd-core" }
tracing = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "shepherd_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "shepherd-desktop"
path = "src/main.rs"

[workspace]
