[package]
name = "shepherd-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "shepherd_cli"
path = "src/lib.rs"

[[bin]]
name = "shepherd"
path = "src/main.rs"

[[bin]]
name = "shep"
path = "src/main.rs"

[dependencies]
shepherd-core = { workspace = true }
shepherd-server = { path = "../shepherd-server" }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
reqwest = { version = "0.12", features = ["json"] }
tokio = { workspace = true }
serde_json = { workspace = true }
