[package]
name = "shepherd-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
portable-pty = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
toml = "0.8"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
async-trait = "0.1"
base64 = "0.22"
image = "0.25"

[[test]]
name = "lifecycle_test"
path = "../../tests/integration/lifecycle_test.rs"

[dev-dependencies]
tempfile = "3"
