[package]
name = "shepherd-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
portable-pty = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
toml = "0.8"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
async-trait = "0.1"
base64 = "0.22"
image = "0.25"
prost = "0.13"
tokio-tungstenite = "0.24"
http = "1.0"
notify = "6"
futures-util = "0.3"
glob = "0.3"
glob-match = "0.2"
regex = "1"

[build-dependencies]
prost-build = "0.13"

[[test]]
name = "lifecycle_test"
path = "../../tests/integration/lifecycle_test.rs"

[[test]]
name = "docs_test"
path = "../../tests/integration/docs_test.rs"

[dev-dependencies]
tempfile = "3"
httpmock = "0.7"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
