[package]
name = "shepherd-server"
version.workspace = true
edition.workspace = true

[dependencies]
shepherd-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
futures = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] }
