[package]
name = "shepherd-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
shepherd-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
futures = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
portpicker = "0.1"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
serde_json = { workspace = true }
tokio = { workspace = true }
shepherd-core = { workspace = true }
